Fixed .feature float overflow issue

--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ display: block; float: right; width: 227px; margin: 0; padding: 10px 0 11px 10px
 	margin-bottom: 25px; 
     margin-bottom: 30px;
     background: url(images/item-background.png) no-repeat 50% 100%;
+	overflow-y: auto;
 }
 
 #mainContent #contentPrimary .block { margin-bottom: 33px; }
